# changepassword

./: BUGS  CHANGELOG  Makefile.in  README  README.brazilian  TODO  changepassword.c  conf.h.default  conf.h.example  configure  configure.in  defs.h  info.h  lang.h
languages/: Chinese.h  Czech.h  Danish.h  Deutsch.h  Dutch.h  English.h  Francais.h  Holland.h  Hungarian.h  Italian.h  Polish.h  Portuguese.h  Romanian.h  Slovenian.h  Spanish.h  Swedish.h  TChinese.h
smbencrypt/: encrypt.c
